# canebo

./: .gitignore  Cargo.toml  Dockerfile.rootfs  build.sh  rootfs.nix  run.sh
canebo-uefi/: Cargo.toml
canebo-uefi/src/: main.rs
rootfs/: .dockerignore  Dockerfile
rootfs/canebo-ui/: Cargo.toml
rootfs/canebo-ui/src/: main.rs
